--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "run-p dev:*",
     "dev:next": "next dev -p 3000",
-    "dev:hcm": "hcm \"src/**/*.module.css\" && tsc --noEmit",
+    "dev:hcm": "hcm 'src/**/*.module.css' -w",
+    "hcm": "hcm 'src/**/*.module.css'",
     "build": "next build && next export",
     "lint": "run-p lint:js lint:prettier lint:style",
     "lint:js": "eslint --ext .ts,.tsx,.js --ignore-path .gitignore .",
@@ -13,8 +14,7 @@
     "lint:style": "stylelint \"src/**/*.css\"",
     "lint:fix": "npm run lint:js -- --fix && prettier --write \"./**/*.{ts,tsx,js}\" --ignore-path .gitignore && npm run lint:style -- --fix",
     "start": "next start",
-    "typecheck": "hcm src/**/*.module.css && tsc --noEmit"
-    "typecheck": "hcm \"src/**/*.module.css\" && tsc --noEmit"
+    "typecheck": "npm run hcm && tsc --noEmit"
   },
   "dependencies": {
     "next": "^13.3.1",
@@ -33,7 +33,6 @@
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
     "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "*25.0.0",
     "typescript": "^5.0.4"
   }
